# hue

./: Cargo.toml  README.md  themes.toml
.github/workflows/: release.yml
src/: catalog.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  target.rs  ui.rs
themes/: ghostty.toml  helix.toml  zed.toml
