[package]
name = "hue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
console = "0.16.3"
directories = "6.0.0"
jsonc-parser = { version = "0.32.1", features = ["cst", "serde", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
similar = "2.7.0"
thiserror = "2.0.18"
toml = "1.0.7"
